--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 <body style="margin: 0;">
     <header
-        style="display: flex; justify-content: center; align-items: center;background-color:var(--container-brand); height: 80px;">
+        style="display: flex; justify-content: center; align-items: center;background-color:var(--container-brand); height: 60px;">
         <div style="display: flex; justify-content: space-between; width: 80%; max-width: 1024px;height: 100%;">
-            <span style="display: flex;align-items: center; color: var(--content-white);padding:8px; height: 100%;">One
+            <span style="display: flex;align-items: center; color: var(--content-white); height: 100%;">One
                 Center v1.0</span>
             <nav style="display: flex; height: 100%;">
                 <button><a href="#">Home</a></button>
