--- a/index.html
+++ b/index.html
@@ -4,54 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OneCenter v1.0 by AS</title>
-    <style>
-        :root {
-            --container-brand: #6161bf;
-            --content-brand: #6161bf;
-            --content-white: #ffffff;
-        }
-
-        button {
-            border: none;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            height: 100%;
-            background-color: transparent;
-            padding: 16px 16px;
-        }
-
-        button:hover {
-            background-color: var(--content-white);
-        }
-
-        button a {
-            color: var(--content-white);
-            text-decoration: none;
-
-        }
-
-        button:hover a {
-            color: var(--content-brand);
-        }
-    </style>
+    <link rel="stylesheet" href="./main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>Ajay Sanaga</title>
 </head>
 
-<body style="margin: 0;">
-    <header
-        style="display: flex; justify-content: center; align-items: center;background-color:var(--container-brand); height: 60px;">
-        <div style="display: flex; justify-content: space-between; width: 80%; max-width: 1024px;height: 100%;">
-            <span style="display: flex;align-items: center; color: var(--content-white); height: 100%;">One
-                Center v1.0</span>
-            <nav style="display: flex; height: 100%;">
-                <button><a href="#">Home</a></button>
+<body>
+    <header>
+        <div class="header_content">
+            <p style="font-size: larger;">
+                Ajay Sanaga
+            </p>
+            <nav style="display: flex;">
+                <button><a href="#">Summary</a></button>
                 <button><a href="#">Projects</a></button>
-                <button><a href="#">Casestudies</a></button>
-                <button><a href="#">Contact Us</a></button>
+                <button><a href="#">Academics</a></button>
+                <button><a href="#">Contact</a></button>
             </nav>
         </div>
     </header>
+    <div class="page_content">
+        <h1>Summary</h1>
+    </main>
+
 </body>
 
 </html>
